--- a/BlazorApp1/Pages/Index.razor
+++ b/BlazorApp1/Pages/Index.razor
@@ -1,9 +1,5 @@
 ﻿@page "/"
-@layout MainLayout;
+@layout MainLayout
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+<Login></Login>
